--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,6 @@
 # Porta do servidor (padrão: 3000)
 PORT=3000
+FRONTEND_URL= "http://localhost:5173",
 
 # URL de conexão com o banco PostgreSQL
 # Formato: postgresql://usuario:senha@host:porta/nome_do_banco
