refactor: standardize import styles and improve code formatting; update UI components for better user experience

--- a/web/biome.jsonc
+++ b/web/biome.jsonc
@@ -5,5 +5,9 @@
     "formatter": {
       "semicolons": "asNeeded"
     }
+  },
+  "files": {
+    "ignoreUnknown": true,
+    "includes": ["src/**/*.{ts,tsx,js,jsx}"]
   }
 }
