--- a/server/package.json
+++ b/server/package.json
@@ -26,9 +26,17 @@
     "@fastify/cors": "11.0.1",
     "@fastify/multipart": "9.0.3",
     "@google/genai": "1.8.0",
+    "@types/html-pdf-node": "^1.0.2",
+    "@types/multer": "^2.0.0",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "0.44.2",
     "fastify": "5.4.0",
     "fastify-type-provider-zod": "5.0.1",
+    "html-pdf-node": "^1.0.8",
+    "jspdf": "^3.0.1",
+    "mammoth": "^1.9.1",
+    "multer": "^2.0.1",
+    "officegen": "^0.6.5",
     "postgres": "3.4.7",
     "zod": "3.25.67"
   }
